@@ -1,7 +1,7 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.36.
-.TH GPODDER "1" "April 2006" "gpodder 0.7+svn20060409 2006-04-09" "User Commands"
+.TH GPODDER "1" "June 2006" "gpodder 0.7+svn20060613 2006-06-13" "User Commands"
 .SH NAME
-gpodder \- manual page for gpodder 0.7+svn20060409 2006-04-09
+gpodder \- manual page for gpodder 0.7+svn20060613 2006-06-13
 .SH DESCRIPTION
 usage: gpodder [options] arg1 arg2
 .PP
@@ -29,8 +29,8 @@ Update channel list, download new podcasts
 \fB\-u\fR, \fB\-\-update\fR
 Update channel list and exit
 .TP
-\fB\-a\fR FEEDURL, \fB\-\-add\fR=\fIFEEDURL\fR
+\fB\-aFEEDURL\fR, \fB\-\-add\fR=\fIFEEDURL\fR
 Subscribe to channel from FEEDURL
 .TP
-\fB\-d\fR n, \fB\-\-delete\fR=\fIn\fR
+\fB\-dn\fR, \fB\-\-delete\fR=\fIn\fR
 Delete channel with ID n
