@@ -34,10 +34,6 @@ enable_ipod_functions = True
 try:
     import gpod
     import eyeD3
-    import dbus
-    # the following is taken from hal-device-manager source
-    if getattr( dbus, 'version', (0,0,0)) >= (0,41,0):
-        import dbus.glib
 except:
     enable_ipod_functions = False
 
@@ -60,17 +56,6 @@ def ipod_supported():
 video_extensions = [ "mov", "mp4", "m4v" ]
 
 
-__ipodmanager = None
-
-def iPodManagerSingleton():
-    global __ipodmanager
-    if __ipodmanager == None:
-        __ipodmanager = iPodManager()
-    
-    return __ipodmanager
-
-
-
 class gPodder_iPodSync(object):
     itdb = None
     ipod_mount = '' # mountpoint for ipod
@@ -80,14 +65,12 @@ class gPodder_iPodSync(object):
     callback_progress = None
     callback_status = None
     callback_done = None
-    ipod_mgr = None
 
-    def __init__( self, callback_progress = None, callback_status = None, callback_done = None):
+    def __init__( self, ipod_mount = '/media/ipod/', callback_progress = None, callback_status = None, callback_done = None):
         if not ipod_supported():
             if libgpodder.isDebugging():
                 print '(ipodsync) iPod functions not supported. (libgpod + eyed3 needed)'
-        self.ipod_mgr = iPodManagerSingleton()
-        self.ipod_mount = self.ipod_mgr.ipod.mount_point
+        self.ipod_mount = ipod_mount
         self.callback_progress = callback_progress
         self.callback_status = callback_status
         self.callback_done = callback_done
@@ -118,11 +101,6 @@ class gPodder_iPodSync(object):
         if self.callback_done != None:
             time.sleep(1)
             gobject.idle_add( self.callback_done)
-        if self.ipod_mgr != None:
-            if self.ipod_mgr.ipod != None:
-                # there has to be a better way.. ;)
-                # os.system( 'sudo eject %s' % ( self.ipod_mgr.ipod.device ))
-                pass
         return True
 
     def remove_from_ipod( self, track, playlists):
@@ -285,140 +263,4 @@ class gPodder_iPodSync(object):
         except:
             # silently ignore :)
             pass
-
-
-class iPod(object):
-    __mountpoint = None
-    
-    def __init__( self, udi):
-        self.is_connected = False
-        self.device = None # /dev/sda
-        self.children = []
-        self.udi = udi
-        if libgpodder.isDebugging():
-            print '(iPod) new with udi: %s' % udi
-    
-    def has( self, udi):
-        return udi in self.children
-
-    def add( self, udi):
-        if libgpodder.isDebugging():
-            print '(iPod) adding: %s' % udi
-        self.children.append( udi)
-
-    def remove( self, udi):
-        if libgpodder.isDebugging():
-            print '(iPod) removing: %s' % udi
-        self.children.remove( udi)
-
-    def get_mount_point( self):
-        return self.__mountpoint
-
-    def set_mount_point( self, mount_point):
-        if libgpodder.isDebugging():
-            print '(iPod) mountpoint: %s' % mount_point
-        self.__mountpoint = mount_point
-        if self.__mountpoint[-1] != '/':
-            self.__mountpoint = self.__mountpoint + '/'
-    
-    mount_point = property( fget = get_mount_point, fset = set_mount_point )
-
-    def blowup( self):
-        if libgpodder.isDebugging():
-            print '(iPod) blown up!'
-
-
-class iPodManager(object):
-    mgr = 'org.freedesktop.Hal.Manager'
-    mgr_path = '/org/freedesktop/Hal/Manager'
-    
-    service = 'org.freedesktop.Hal'
-    interface = 'org.freedesktop.Hal.Device'
-    
-    ipod_key = 'portable_audio_player.storage_device'
-    ipod_value = '/org/freedesktop/Hal/devices/storage_model_iPod'
-    ipod_parent_key = 'info.parent'
-    
-    bus = None
-
-    __ipod = None
-    listeners = []
-    
-    def __init__( self):
-        self.dbus_connect()
-    
-    def dbus_connect( self):
-        self.bus = dbus.SystemBus()
-        self.bus.add_signal_receiver( self.device_added, 'DeviceAdded', self.mgr, self.service, self.mgr_path)
-        self.bus.add_signal_receiver( self.device_removed, 'DeviceRemoved', self.mgr, self.service, self.mgr_path)
-
-    def device_added( self, udi):
-        if libgpodder.isDebugging():
-            print '(iPodManager) device_added: %s' % udi
-        self.notify_me( udi)
-        props = self.get_properties( udi)
-        
-        # add new iPod if connected
-        if props.has_key( self.ipod_key):
-            if props[self.ipod_key] == self.ipod_value:
-                if libgpodder.isDebugging():
-                    print '(iPodManager) received device_added'
-                self.ipod = iPod( udi)
-                self.ipod.device = props['block.device']
-                self.notify_all()
-
-        # iPod-related
-        if self.ipod != None and props.has_key( self.ipod_parent_key) and props[self.ipod_parent_key] == self.ipod_value:
-            self.ipod.add( udi)
-
-    def notify_me( self, udi):
-        callback = lambda *args: self.device_modified( udi, *args)
-        self.bus.add_signal_receiver( callback, 'PropertyModified', self.interface, self.service, udi)
-
-    def device_removed( self, udi):
-        if libgpodder.isDebugging():
-            print '(iPodManager) device_removed: %s' % udi
-        # iPod-related
-        if self.ipod != None and self.ipod.has( udi):
-            self.ipod.remove( udi)
-        if self.ipod != None and self.ipod.udi == udi:
-            if libgpodder.isDebugging():
-                print '(iPodManager) received device_removed'
-            self.ipod.blowup()
-            self.ipod = None
-            self.notify_all()
-
-    def device_modified( self, udi, num_changes, list):
-        props = self.get_properties( udi)
-        for item in list:
-            key = item[0]
-            if self.ipod != None:
-                if key == 'volume.mount_point':
-                    self.ipod.mount_point = props[key]
-                    self.notify_all()
-            
-    def get_properties( self, udi):
-        object = self.bus.get_object( self.service, udi)
-        return object.GetAllProperties( dbus_interface = self.interface)
-
-    def get_ipod( self):
-        return self.__ipod
-
-    def notify_all( self):
-        for listener in self.listeners:
-            listener( self.ipod)
-
-    def set_ipod( self, ipod):
-        self.__ipod = ipod
-
-    ipod = property( fget = get_ipod, fset = set_ipod )
-
-    def register( self, callback):
-        if not callback in self.listeners:
-            self.listeners.append( callback)
-            callback( self.ipod)
-
-    def unregister( self, callback):
-        if callback in self.listeners:
-            self.listeners.remove( callback)
 
